<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
 <name>petsitter</name>
 <version>1.0.0</version>
 <description>
 ROS 2 packages for petSitter
 </description>
 <maintainer email="ivilvil@epsg.upv.es">Iv치n, Abid치n</maintainer>
 <license>MIT</license>
 <url type="website">http://abricla.upv.edu.es</url>
 <url type="repository">https://github.com/abidanBrito/petsitter-ros2</url>
 <url type="bugtracker">https://github.com/abidanBrito/petsitter-ros2</url>
 <author email="ivilvil@epsg.upv.es">Iv치n, Abid치n</author>
 <buildtool_depend>ament_cmake</buildtool_depend>
 <exec_depend>petsitter_world_01</exec_depend>
 <exec_depend>petsitter_slam_01</exec_depend>
 <export>
 	<build_type>ament_cmake</build_type>
 </export>
</package>
